--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alfi Azizi",
   "license": "ISC",
   "dependencies": {
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2"
   }
 }
